# AN50_ZCU104

./: AN_script.tcl  AN_script2.tcl  Bias_gen.py  Conv2_out_image.txt  README.md  Replace.txt  conv2Bias_sep.txt  conv2Weights_sep.txt
Alex_Net/: NN.cpp  NN.h  compile_commands.json  hls.app  hls_config.cfg  vitis-comp.json
Alex_Net/Alex_Net/: Alex_Net.hlscompile_summary
Alex_Net/Conv1/: Conv1.aps  Conv1_data.json
Alex_Net/Conv2/: Conv2.aps  Conv2.directive  Conv2_data.json
Alex_Net/Conv3/: Conv3.aps  Conv3_data.json
Alex_Net/Conv4/: Conv4.aps  Conv4.directive  Conv4_data.json
Alex_Net/Conv5/: Conv5.aps  Conv5.directive  Conv5_data.json
Alex_Net/Pad1/: Pad1.aps  Pad1.directive  Pad1_data.json
Alex_Net/Pad4/: Pad4.aps  Pad4.directive  Pad4_data.json
Alex_Net/Pool1/: Pool1.aps  Pool1.directive  Pool1_data.json
Alex_Net/Pool2/: Pool2.aps  Pool2.directive  Pool2_data.json
Alex_Net/Pool5/: Pool5.aps  Pool5.directive  Pool5_data.json
Alex_Net/Pool5/impl/misc/drivers/pool5_v1_0/src/: CMakeLists.txt  xpool5_sinit.c
Alex_Net/norm1/: norm1.aps  norm1.directive  norm1_data.json
Alex_Net/norm2/: norm2.aps  norm2.directive  norm2_data.json
Alex_Net/pad2/: pad2.aps  pad2.directive  pad2_data.json
Alex_Net/pad3/: pad3.aps
Alex_Net/solution1/: solution1.aps  solution1.directive  solution1_data.json
NN/: .bias.h.swp  NN.cpp  NN.tcl  bias.h  huk
NN/Alex_Net/: hls.app
Python_CSV_Convertor-main/: Bias_gen.py  conv3Bias_sep.txt
_ide/: .peers.ini  workspace_journal.py  workspace_journal_3804.py  workspace_journal_4652.py
_ide/.wsdata/: version.ini  (+1 more)
(+4279 files in other folders)
